--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "37b2b4cd2a0c5a1c",
    "metadata": {
     "ExecuteTime": {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4517fbe22a47bbf8",
    "metadata": {
     "ExecuteTime": {
@@ -344,13 +344,13 @@
     "bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
     "\n",
     "# Send a plant status update\n",
-    "bot.send_plant_status(\n",
-    "    user_id=\"USER_ID\",\n",
-    "    temperature=25.5,\n",
-    "    humidity=65.0,\n",
-    "    light_level=80.0,\n",
-    "    status=\"warning\"\n",
-    ")"
+    "# bot.send_plant_status(\n",
+    "#     user_id=\"USER_ID\",\n",
+    "#     temperature=25.5,\n",
+    "#     humidity=65.0,\n",
+    "#     light_level=80.0,\n",
+    "#     status=\"warning\"\n",
+    "# )"
    ]
   },
   {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "RdUcFrKniSel",
    "metadata": {
     "colab": {
@@ -616,13 +616,17 @@
     "import base64\n",
     "#from google.colab import userdata\n",
     "# Load the image and encode it in base64\n",
-    "image_path = \"plant.jpg\"\n",
+    "image_path = \"plant.jpg\" #! Need to substitute for ngrok link\n",
     "\n",
-    "def get_plant_id(image_path):\n",
+    "def identify_plant(image_path):\n",
     "    # Define the endpoint and API key\n",
     "    url = \"https://api.plant.id/v2/identify\"\n",
     "    #api_key = userdata.get('plantid_key')  # Replace with your actual API key\n",
     "    api_key = \"V3bNS9Yrc6yWsY2pgevJnjNoYtnhIw6Uvh9PxvuNwiyTyYf5Tr\"\n",
+    "    \n",
+    "    # need to add this:\n",
+    "    #https://plant.id/api/v3/kb/plants/:access_token?details=common_names,\n",
+    "    # url,description,taxonomy,rank,gbif_id,inaturalist_id,image,synonyms,edible_parts,watering,propagation_methods\n",
     "\n",
     "\n",
     "    with open(image_path, \"rb\") as image_file:\n",
@@ -651,6 +655,7 @@
     "    if response.status_code == 200:\n",
     "        results = response.json()\n",
     "\n",
+    "        #! Need to fix the probelem with the results and getting the details\n",
     "        # water = results[\"watering\"]\n",
     "        # best_watering = results[\"best_watering\"]\n",
     "        # best_light_condition = results[\"best_light_condition\"]\n",
@@ -696,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "wCoKKd20irtz",
    "metadata": {
     "colab": {
@@ -707,22 +712,38 @@
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'watering'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m plant_name_with_highest_probability \u001b[38;5;241m=\u001b[39m \u001b[43mget_plant_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(plant_name_with_highest_probability)\n\u001b[0;32m      3\u001b[0m PLANT_NAME \u001b[38;5;241m=\u001b[39m plant_name_with_highest_probability\n",
-      "Cell \u001b[1;32mIn[28], line 40\u001b[0m, in \u001b[0;36mget_plant_id\u001b[1;34m(image_path)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m     38\u001b[0m     results \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m---> 40\u001b[0m     water \u001b[38;5;241m=\u001b[39m \u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwatering\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     41\u001b[0m     best_watering \u001b[38;5;241m=\u001b[39m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbest_watering\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     42\u001b[0m     best_light_condition \u001b[38;5;241m=\u001b[39m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbest_light_condition\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'watering'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species: Rosa chinensis, Probability: 67.26%\n",
+      "\n",
+      "\n",
+      "Species: Rosa × odorata, Probability: 23.71%\n",
+      "\n",
+      "\n",
+      "Species: Rosa lucieae, Probability: 3.50%\n",
+      "\n",
+      "\n",
+      "Species: Rosa gallica, Probability: 2.31%\n",
+      "\n",
+      "\n",
+      "Plant with the highest probability: Rosa chinensis\n",
+      "Rosa chinensis\n"
      ]
     }
    ],
    "source": [
-    "plant_name_with_highest_probability = get_plant_id(image_path)\n",
+    "plant_name_with_highest_probability = identify_plant(image_path)\n",
     "print(plant_name_with_highest_probability)\n",
     "PLANT_NAME = plant_name_with_highest_probability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f842aa30",
+   "metadata": {},
+   "source": [
+    "## Health Assessment"
    ]
   },
   {
@@ -733,7 +754,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def get_health_status(image_path):\n",
+    "def health_assessment(image_path):\n",
     "    # Define the endpoint and API key\n",
     "    url = \"https://api.plant.id/v2/health_assessment\"\n",
     "    #api_key = userdata.get('plantid_key')  # Replace with your actual API key\n",
@@ -776,10 +797,7 @@
     "        results = response.json()\n",
     "        print(\"Plant Health Assessment Results:\")\n",
     "\n",
-    "        print(results.keys())\n",
-    "\n",
-    "       \n",
-    "\n",
+    "        print(results.keys())    \n",
     "\n",
     "\n",
     "        # Check if the response contains health assessment information\n",
@@ -808,38 +826,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "784d9584",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plant Health Assessment Results:\n",
-      "dict_keys(['id', 'custom_id', 'meta_data', 'uploaded_datetime', 'finished_datetime', 'images', 'modifiers', 'secret', 'fail_cause', 'countable', 'feedback', 'is_plant', 'is_plant_probability', 'health_assessment'])\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'watering'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m health_status \u001b[38;5;241m=\u001b[39m \u001b[43mget_health_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# get the health status of the plant and save it\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[26], line 46\u001b[0m, in \u001b[0;36mget_health_status\u001b[1;34m(image_path)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlant Health Assessment Results:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28mprint\u001b[39m(results\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[1;32m---> 46\u001b[0m water \u001b[38;5;241m=\u001b[39m \u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwatering\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     47\u001b[0m best_watering \u001b[38;5;241m=\u001b[39m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbest_watering\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     48\u001b[0m best_light_condition \u001b[38;5;241m=\u001b[39m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbest_light_condition\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'watering'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "health_status = get_health_status(image_path) # get the health status of the plant and save it\n"
+    "health_status = health_assessment(image_path) # get the health status of the plant and save it\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "06db3ec1",
    "metadata": {},
    "outputs": [
@@ -853,7 +850,7 @@
        " 'disease_details': {'local_name': 'Leotiomycetes', 'language': 'en'}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,6 +868,97 @@
    "outputs": [],
    "source": [
     "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c77066a0",
+   "metadata": {},
+   "source": [
+    "### Wrapper for sending the health status to Groq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7db202e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from groq import Groq\n",
+    "\n",
+    "client = Groq(\n",
+    "    api_key=\"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\",\n",
+    ")\n",
+    "\n",
+    "# Initialize the LINE bot with your channel access token\n",
+    "# CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
+    "# bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
+    "#we have to remember to put these keys into the secrets\n",
+    "bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71d0934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_groq_health_assessment(image_path, plant_name):\n",
+    "    \"\"\"\n",
+    "    Sends plant health status message based on a picture and PlantID API to the Groq API.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # get the health assessment of the plant\n",
+    "    health_assessment = health_assessment(image_path)\n",
+    "\n",
+    "    # craft the prompt\n",
+    "    user_message = (\n",
+    "        f\"You are Plantita, an expert plant care advisor with a warm, caring personality like a concerned aunt.\\n\"\n",
+    "        f\"Based on the health assessment of the plant {plant_name}:\\n\"\n",
+    "        f\"{health_assessment[0]}\\n\"\n",
+    "        f\"Please analyze these conditions and provide:\\n\"\n",
+    "        \"1. A caring, conversational assessment of the plant's current environment\\n\"\n",
+    "        \"2. Specific recommendations for improvement if needed\\n\"\n",
+    "        \"3. Any potential risks to the plant's health based on these conditions\\n\"\n",
+    "        \"4. A simple action plan for the plant owner\\n\"\n",
+    "\n",
+    "        \"Keep your response friendly and encouraging, like a knowledgeable aunt giving advice about their beloved plants.\"\n",
+    "    )\n",
+    "\n",
+    "    response = client.chat.completions.create(\n",
+    "        messages=[{\"role\": \"user\", \"content\": user_message}],\n",
+    "        model=\"llama3-8b-8192\"\n",
+    "    )\n",
+    "\n",
+    "    print(\"Plant health status message sent!\")\n",
+    "    print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5ee89634",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Test\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43msend_groq_health_assessment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhealth_status\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPLANT_NAME\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[11], line 18\u001b[0m, in \u001b[0;36msend_groq_health_assessment\u001b[1;34m(health_assessment, plant_name)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mSends plant health status message based on a picture and PlantID API to the Groq API.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m user_message \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are Plantita, an expert plant care advisor with a warm, caring personality like a concerned aunt.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBased on the health assessment of the plant \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mplant_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKeep your response friendly and encouraging, like a knowledgeable aunt giving advice about their beloved plants.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     16\u001b[0m )\n\u001b[1;32m---> 18\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     19\u001b[0m     messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: user_message}],\n\u001b[0;32m     20\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mllama3-8b-8192\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     21\u001b[0m )\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlant health status message sent!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'client' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "send_groq_health_assessment(health_status, PLANT_NAME)"
    ]
   },
   {
