Updated wrapper function for Health assessment

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -54,15 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "Wq9XjLyPjwDM",
    "metadata": {
     "id": "Wq9XjLyPjwDM"
    },
    "outputs": [],
    "source": [
-    "PLANT_NAME = \"DEFAULT NAME\" # we need to find a way to keep this in the memory.\n",
-    "#Since the code is always running and only sends messages at some intervals, it shouldn't be that hard to do"
+    "# we need to find a way to keep this in the memory.\n",
+    "#Since the code is always running and only sends messages at some intervals, it shouldn't be that hard to do\n",
+    "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name"
    ]
   },
   {
@@ -748,13 +749,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bc40d596",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def health_assessment(image_path):\n",
+    "def get_health_assessment(image_path):\n",
     "    # Define the endpoint and API key\n",
     "    url = \"https://api.plant.id/v2/health_assessment\"\n",
     "    #api_key = userdata.get('plantid_key')  # Replace with your actual API key\n",
@@ -787,19 +788,14 @@
     "\n",
     "best_soil_type - string - short paragraph on optimal soil types for growing the plant, English only'''\n",
     "\n",
-    "\n",
-    "\n",
     "    # Send POST request\n",
     "    response = requests.post(url, headers=headers, json=data)\n",
     "    \n",
     "\n",
     "    if response.status_code == 200:\n",
     "        results = response.json()\n",
-    "        print(\"Plant Health Assessment Results:\")\n",
-    "\n",
-    "        print(results.keys())    \n",
-    "\n",
-    "\n",
+    "        #print(\"Plant Health Assessment Results:\")\n",
+    "        #print(results.keys())    \n",
     "        # Check if the response contains health assessment information\n",
     "        if \"health_assessment\" in results:\n",
     "            health_info = results[\"health_assessment\"]\n",
@@ -813,61 +809,16 @@
     "\n",
     "                # If diseases are detected, print each disease and its details\n",
     "                for disease in health_info[\"diseases\"]:\n",
-    "                    print(f\"Diagnosis: {disease['name']}\")\n",
-    "                    print(f\"Probability: {disease['probability']*100:.2f}%\")\n",
-    "                    print(f\"Suggested Treatment: {disease.get('treatment', 'N/A')}\")\n",
-    "                    print(\"\\n\")\n",
+    "                    pass\n",
+    "                    # print(f\"Diagnosis: {disease['name']}\")\n",
+    "                    # print(f\"Probability: {disease['probability']*100:.2f}%\")\n",
+    "                    # print(f\"Suggested Treatment: {disease.get('treatment', 'N/A')}\")\n",
+    "                    # print(\"\\n\")\n",
     "                return health_info[\"diseases\"]\n",
     "        else:\n",
     "            print(\"No health assessment information available in the response.\")\n",
     "    else:\n",
     "        print(f\"Error: {response.status_code}, Message: {response.text}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "784d9584",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "health_status = health_assessment(image_path) # get the health status of the plant and save it\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "06db3ec1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Leotiomycetes',\n",
-       " 'probability': 0.1611,\n",
-       " 'redundant': True,\n",
-       " 'entity_id': 469,\n",
-       " 'disease_details': {'local_name': 'Leotiomycetes', 'language': 'en'}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "health_status[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7c35cf9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name"
    ]
   },
   {
@@ -880,45 +831,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7db202e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from groq import Groq\n",
-    "\n",
-    "client = Groq(\n",
-    "    api_key=\"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\",\n",
-    ")\n",
-    "\n",
-    "# Initialize the LINE bot with your channel access token\n",
-    "# CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
-    "# bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
-    "#we have to remember to put these keys into the secrets\n",
-    "bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "b71d0934",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from groq import Groq\n",
     "def send_groq_health_assessment(image_path, plant_name):\n",
     "    \"\"\"\n",
     "    Sends plant health status message based on a picture and PlantID API to the Groq API.\n",
     "    \"\"\"\n",
     "\n",
+    "    # Initialize the Groq client\n",
+    "    client = Groq(\n",
+    "    api_key=\"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\",\n",
+    "    )\n",
+    "\n",
+    "    # Initialize the LINE bot with your channel access token\n",
+    "    # CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
+    "    # bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
+    "    #we have to remember to put these keys into the secrets\n",
+    "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
+    "\n",
     "    # get the health assessment of the plant\n",
-    "    health_assessment = health_assessment(image_path)\n",
+    "    health_status = get_health_assessment(image_path)\n",
+    "    health_status = health_status[0]\n",
+    "\n",
+    "    #print(\"health assessment:\", health_status)\n",
     "\n",
     "    # craft the prompt\n",
     "    user_message = (\n",
     "        f\"You are Plantita, an expert plant care advisor with a warm, caring personality like a concerned aunt.\\n\"\n",
     "        f\"Based on the health assessment of the plant {plant_name}:\\n\"\n",
-    "        f\"{health_assessment[0]}\\n\"\n",
+    "        f\"{health_status}\\n\"\n",
     "        f\"Please analyze these conditions and provide:\\n\"\n",
     "        \"1. A caring, conversational assessment of the plant's current environment\\n\"\n",
     "        \"2. Specific recommendations for improvement if needed\\n\"\n",
@@ -939,26 +885,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "5ee89634",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'client' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Test\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43msend_groq_health_assessment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhealth_status\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPLANT_NAME\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[11], line 18\u001b[0m, in \u001b[0;36msend_groq_health_assessment\u001b[1;34m(health_assessment, plant_name)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mSends plant health status message based on a picture and PlantID API to the Groq API.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      5\u001b[0m user_message \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are Plantita, an expert plant care advisor with a warm, caring personality like a concerned aunt.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBased on the health assessment of the plant \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mplant_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKeep your response friendly and encouraging, like a knowledgeable aunt giving advice about their beloved plants.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     16\u001b[0m )\n\u001b[1;32m---> 18\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     19\u001b[0m     messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: user_message}],\n\u001b[0;32m     20\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mllama3-8b-8192\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     21\u001b[0m )\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlant health status message sent!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'client' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The plant shows signs of disease.\n",
+      "health assessment: {'name': 'Leotiomycetes', 'probability': 0.1611, 'redundant': True, 'entity_id': 469, 'disease_details': {'local_name': 'Leotiomycetes', 'language': 'en'}}\n",
+      "Plant health status message sent!\n",
+      "Sweetie, I'm so glad you brought Rosa chinensis to me for a check-up! Let's take a closer look at the assessment together.\n",
+      "\n",
+      "It seems like Leotiomycetes might be lurking in the background, with a probability of 0.1611. Now, don't worry just yet, but I do want to gently nudge you to take a closer look at the plant's environment. The fact that Leotiomycetes is detected tells me that the plant might be experiencing some stress, possibly due to factors like poor ventilation, inadequate light, or inconsistent watering.\n",
+      "\n",
+      "Sweetheart, I think Rosa chinensis is craving a bit more TLC (tender loving care). Here are some super easy recommendations to get the plant back on track:\n",
+      "\n",
+      "1. **Give it a little extra love**: Increase the air circulation around the plant by moving it a few inches away from any walls or using a fan on a low setting. This will help prevent fungal growth.\n",
+      "2. **Brighten up**: Rosa chinensis loves plenty of indirect sunlight. Make sure it's placed near a sunny window or a grow light. This will give it the energy it needs to thrive!\n",
+      "3. **Hydro-logically harmonious**: Check the soil moisture by sticking your finger into the soil up to the first knuckle. If it feels dry, give Rosa chinensis a good watering. If it's already moist, you can wait a few more days before watering again.\n",
+      "\n",
+      "Sweetie, by making these simple adjustments, you'll be reducing the risk of Leotiomycetes taking hold and potentially damaging the plant.\n",
+      "\n",
+      "Lastly, here's a simple action plan for you to follow:\n",
+      "\n",
+      "1. Keep an eye on the plant's temperature range (it prefers between 65-75°F/18-24°C).\n",
+      "2. Inspect the plant regularly for signs of pests or diseases, and remove any affected areas to prevent the spread.\n",
+      "3. Water Rosa chinensis carefully, avoiding overwatering, which can exacerbate fungal growth.\n",
+      "\n",
+      "You're doing a fantastic job taking care of Rosa chinensis, and with these minor tweaks, it'll be back to its lovely self in no time! If you have any more questions or concerns, don't hesitate to reach out. I'm always here to help.\n"
      ]
     }
    ],
    "source": [
     "# Test\n",
-    "send_groq_health_assessment(health_status, PLANT_NAME)"
+    "send_groq_health_assessment(image_path, PLANT_NAME)"
    ]
   },
   {
