Tried to get description for the plant ID

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "RdUcFrKniSel",
    "metadata": {
     "colab": {
@@ -627,7 +627,7 @@
     "        \"images\": [base64_image],\n",
     "        \"organs\": [],  # Specify which part of the plant you are identifying (leaf, flower, etc.)\n",
     "        \"include-related-images\": False,  # Optional: Include related images in response\n",
-    "        \"include-plant-details\": [\"common_names\", \"url\", \"wiki_description\", \"watering\"]  # Specify the plant details you need\n",
+    "        \"include-plant-details\": [\"common_names\", \"url\", \"wiki_description\"]  # Specify the plant details you need\n",
     "    }\n",
     "\n",
     "    # Send POST request\n",
@@ -637,18 +637,20 @@
     "    plant_name_with_highest_probability = None\n",
     "\n",
     "    plant_info_dict = {}\n",
+    "    plant_info_dict[\"description\"] = \"\"\n",
+    "    plant_info_dict[\"plant_name\"] = \"\"\n",
     "\n",
     "    # Check the response\n",
     "    if response.status_code == 200:\n",
     "        results = response.json()\n",
     "\n",
     "        #! Need to fix the probelem with the results and getting the details\n",
-    "        # water = results[\"watering\"]\n",
+    "        #water = results[\"watering\"]\n",
     "        # best_watering = results[\"best_watering\"]\n",
     "        # best_light_condition = results[\"best_light_condition\"]\n",
     "        # best_soil_type = results[\"best_soil_type\"]\n",
     "\n",
-    "        # print(f\"Watering: {water['min']} to {water['max']}\")\n",
+    "        #print(f\"Watering: {water['min']} to {water['max']}\")\n",
     "        # print(\"Best Watering Practices:\", best_watering)\n",
     "        # print(\"Best Light Conditions:\", best_light_condition)\n",
     "        # print(\"Best Soil Types:\", best_soil_type)\n",
@@ -665,7 +667,7 @@
     "                \n",
     "\n",
     "            # Print suggestion details\n",
-    "            print(f\"Species: {suggestion['plant_name']}, Probability: {probability * 100:.2f}%\")\n",
+    "            #print(f\"Species: {suggestion['plant_name']}, Probability: {probability * 100:.2f}%\")\n",
     "\n",
     "            # Additional details (if requested)\n",
     "            if \"common_names\" in suggestion:\n",
@@ -675,13 +677,15 @@
     "            if \"wiki_description\" in suggestion and \"value\" in suggestion[\"wiki_description\"]:\n",
     "                print(\"Description:\", suggestion[\"wiki_description\"][\"value\"])\n",
     "                print(\"Wiki:\",suggestion[\"wiki_description\"])\n",
+    "                plant_info_dict[\"description\"] = suggestion[\"wiki_description\"][\"value\"]\n",
+    "\n",
     "            print(\"\\n\")\n",
     "\n",
     "        # Print the plant with the highest probability\n",
-    "        print(f\"Plant with the highest probability: {plant_name_with_highest_probability}\")\n",
+    "        #print(f\"Plant with the highest probability: {plant_name_with_highest_probability}\")\n",
     "        plant_info_dict[\"plant_name\"] = plant_name_with_highest_probability\n",
-    "        plant_info_dict[\"des\"] = highest_probability\n",
-    "        return plant_name_with_highest_probability\n",
+    "        \n",
+    "        return plant_info_dict\n",
     "\n",
     "    else:\n",
     "        print(f\"Error: {response.status_code}, Message: {response.text}\")\n",
@@ -705,27 +709,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Species: Rosa chinensis, Probability: 67.26%\n",
       "\n",
       "\n",
-      "Species: Rosa × odorata, Probability: 23.71%\n",
       "\n",
       "\n",
-      "Species: Rosa lucieae, Probability: 3.50%\n",
       "\n",
       "\n",
-      "Species: Rosa gallica, Probability: 2.31%\n",
       "\n",
       "\n",
-      "Plant with the highest probability: Rosa chinensis\n",
-      "Rosa chinensis\n"
+      "Rosa chinensis\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "plant_name_with_highest_probability = identify_plant(image_path)\n",
-    "print(plant_name_with_highest_probability)\n",
-    "PLANT_NAME = plant_name_with_highest_probability"
+    "plant_info_dict = identify_plant(image_path)\n",
+    "PLANT_NAME = plant_info_dict[\"plant_name\"]\n",
+    "PLANT_DESCRIPTION = plant_info_dict[\"description\"]\n",
+    "print(PLANT_NAME)\n",
+    "print(PLANT_DESCRIPTION) # NOT ALL PLANTS HAVE DESCRIPTIONS\n",
+    "# Better use Groq to get the plant description"
    ]
   },
   {
@@ -745,7 +748,7 @@
    "source": [
     "import os\n",
     "from groq import Groq\n",
-    "def send_groq_health_assessment(image_path, plant_name):\n",
+    "def send_groq_plant_id(image_path):\n",
     "    \"\"\"\n",
     "    Sends plant health status message based on a picture and PlantID API to the Groq API.\n",
     "    \"\"\"\n",
@@ -756,9 +759,6 @@
     "    )\n",
     "\n",
     "    # Initialize the LINE bot with your channel access token\n",
-    "    # CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
-    "    # bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
-    "    #we have to remember to put these keys into the secrets\n",
     "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
     "\n",
     "    # get the plant identification\n",
@@ -824,7 +824,7 @@
     "\n",
     "    data = {\n",
     "        \"images\": [base64_image],\n",
-    "        \"organs\": [\"leaf\"],  # Optional: Specify the plant part (e.g., leaf, flower, etc.)\n",
+    "        \"organs\": [],  # Optional: Specify the plant part (e.g., leaf, flower, etc.)\n",
     "        \"include-related-images\": False  # Optional: Include related images in the response\n",
     "    }\n",
     "\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "gXHwNc5WVVV6",
    "metadata": {
     "id": "gXHwNc5WVVV6"
@@ -1007,41 +1007,7 @@
     "    moisture = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
     "    pressure = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
     "\n",
-    "    return {\"temperature\": temperature, \"humidity\": humidity,\"pressure\": pressure, \"moisture\": moisture}\n",
-    "\n",
-    "# def send_groq_plant_status(data):\n",
-    "#     \"\"\"\n",
-    "#     Sends plant care message based on the data to the Groq API.\n",
-    "#     \"\"\"\n",
-    "#     user_message = (\n",
-    "#         f\"You are Plantita, an expert plant care advisor with a warm, caring personality like a concerned aunt.\\n\"\n",
-    "#         f\"Current readings for Monstera Deliciosa:\\n\"\n",
-    "#         f\"    temperature={data['temperature']}°C,\\n\"\n",
-    "#         f\"    humidity={data['humidity']}%,\\n\"\n",
-    "#         f\"    pressure={data['pressure']}%,\\n\"\n",
-    "#         f\"    moisture={data['moisture']}%,\\n\\n\"\n",
-    "\n",
-    "#         \"Ideal conditions for this plant:\\n\"\n",
-    "#          \"- Temperature: [Fill in with the values according to the {plant_name}]\\n\"\n",
-    "#         \"- Humidity: [Fill in with the values according to the {plant_name}]\\n\"\n",
-    "#         \"- Pressure: [Fill in with the values according to the {plant_name}]\\n\"\n",
-    "#         \"- Moisture: [Fill in with the values according to the {plant_name}]\\n\\n\"\n",
-    "\n",
-    "#         \"Please analyze these conditions and provide:\\n\"\n",
-    "#         \"1. A caring, conversational assessment of the plant's current environment\\n\"\n",
-    "#         \"2. Specific recommendations for improvement if needed\\n\"\n",
-    "#         \"3. Any potential risks to the plant's health based on these conditions\\n\"\n",
-    "#         \"4. A simple action plan for the plant owner\\n\\n\"\n",
-    "#         \"Keep your response friendly and encouraging, like a knowledgeable aunt giving advice about their beloved plants.\"\n",
-    "#     )\n",
-    "\n",
-    "#     response = client.chat.completions.create(\n",
-    "#         messages=[{\"role\": \"user\", \"content\": user_message}],\n",
-    "#         model=\"llama3-8b-8192\"\n",
-    "#     )\n",
-    "\n",
-    "#     print(\"Plant care message sent!\")\n",
-    "#     print(response.choices[0].message.content)\n"
+    "    return {\"temperature\": temperature, \"humidity\": humidity,\"pressure\": pressure, \"moisture\": moisture}\n"
    ]
   },
   {
@@ -1166,6 +1132,14 @@
     "\n",
     "except KeyboardInterrupt:\n",
     "    print(\"Simulation stopped.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a3a3b6b",
+   "metadata": {},
+   "source": [
+    "# Real loop"
    ]
   },
   {
