--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "Wq9XjLyPjwDM",
    "metadata": {
     "id": "Wq9XjLyPjwDM"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "37b2b4cd2a0c5a1c",
    "metadata": {
     "ExecuteTime": {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4517fbe22a47bbf8",
    "metadata": {
     "ExecuteTime": {
@@ -407,11 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweetheart, it looks like your Monstera Deliciosa is doing okay, but could use a little TLC! It's a bit warm for this delicate soul, and the humidity could be boosted. I'm also a bit concerned about the light level, darling - it's a bit sparse for this plant's taste.\n",
-      "\n",
-      "To get your Monstera thriving, I recommend moving it to a spot with a consistent temperature between 20-25°C, increasing the humidity to 60-80%, and giving it a spot with bright, indirect light. Don't worry, these adjustments will make all the difference!\n",
-      "\n",
-      "By adjusting these conditions, you'll be keeping your Monstera happy and healthy.\n"
+      "Sweetie, I can tell that you're doing your best for your Monstera Deliciosa, but it's looking like it might be a bit too warm in there! The current temperature is a bit above the ideal range, and the humidity is a tad low. Recommended fix: try moving your plant to a cooler spot with a consistent temperature between 20-25°C, and consider misting it some more to get that humidity level up to 60-80%.\n"
      ]
     }
    ],
@@ -504,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "0uqbM8eJQch4",
    "metadata": {
     "colab": {
@@ -516,17 +512,15 @@
    },
    "outputs": [
     {
-     "ename": "SerialException",
-     "evalue": "could not open port 'COM5': FileNotFoundError(2, 'The system cannot find the file specified.', None, 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSerialException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m baud_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m9600\u001b[39m  \u001b[38;5;66;03m# Must match the baud rate set in the Arduino code\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Open the serial connection\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m ser \u001b[38;5;241m=\u001b[39m \u001b[43mserial\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSerial\u001b[49m\u001b[43m(\u001b[49m\u001b[43mserial_port\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbaud_rate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m2\u001b[39m)  \u001b[38;5;66;03m# Allow time for the connection to establish\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCollecting data from Arduino...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\user\\.conda\\envs\\aiot\\Lib\\site-packages\\serial\\serialwin32.py:33\u001b[0m, in \u001b[0;36mSerial.__init__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_overlapped_read \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_overlapped_write \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mSerial\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\user\\.conda\\envs\\aiot\\Lib\\site-packages\\serial\\serialutil.py:244\u001b[0m, in \u001b[0;36mSerialBase.__init__\u001b[1;34m(self, port, baudrate, bytesize, parity, stopbits, timeout, xonxoff, rtscts, write_timeout, dsrdtr, inter_byte_timeout, exclusive, **kwargs)\u001b[0m\n\u001b[0;32m    241\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124munexpected keyword arguments: \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(kwargs))\n\u001b[0;32m    243\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m port \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 244\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\user\\.conda\\envs\\aiot\\Lib\\site-packages\\serial\\serialwin32.py:64\u001b[0m, in \u001b[0;36mSerial.open\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_port_handle \u001b[38;5;241m==\u001b[39m win32\u001b[38;5;241m.\u001b[39mINVALID_HANDLE_VALUE:\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_port_handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m    \u001b[38;5;66;03m# 'cause __del__ is called anyway\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m SerialException(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcould not open port \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mportstr, ctypes\u001b[38;5;241m.\u001b[39mWinError()))\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_overlapped_read \u001b[38;5;241m=\u001b[39m win32\u001b[38;5;241m.\u001b[39mOVERLAPPED()\n",
-      "\u001b[1;31mSerialException\u001b[0m: could not open port 'COM5': FileNotFoundError(2, 'The system cannot find the file specified.', None, 2)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting data from Arduino...\n",
+      "Temperature: 24.78 °C\n",
+      "Humidity: 65.94 %\n",
+      "Pressure: 102.02 hPa\n",
+      "Soil Moisture (Analog): 99.00 %\n",
+      "Data collection stopped.\n"
      ]
     }
    ],
@@ -985,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "gXHwNc5WVVV6",
    "metadata": {
     "id": "gXHwNc5WVVV6"
@@ -995,7 +989,6 @@
     "import random\n",
     "import time\n",
     "from datetime import datetime, timedelta\n",
-    "\n",
     "\n",
     "\n",
     "def simulate_sensor_data():\n",
@@ -1012,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4pQnuxZAX9VK",
    "metadata": {
     "id": "4pQnuxZAX9VK"
@@ -1101,8 +1094,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulated Data: {'temperature': 22.17, 'humidity': 56.93, 'pressure': 68.18, 'moisture': 32.37}\n",
-      "Simulated Data: {'temperature': 25.97, 'humidity': 58.74, 'pressure': 42.95, 'moisture': 30.81}\n"
+      "Simulated Data: {'temperature': 21.66, 'humidity': 56.62, 'pressure': 34.21, 'moisture': 69.35}\n"
      ]
     }
    ],
@@ -1118,7 +1110,6 @@
     "    while True:\n",
     "        # Simulate sensor data readings\n",
     "        data = simulate_sensor_data()\n",
-    "        print(f\"Simulated Data: {data}\")\n",
     "\n",
     "        # Check if it's time to send a message\n",
     "        if datetime.now() >= next_message_time:\n",
@@ -1144,37 +1135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "91f02e57",
+   "execution_count": 3,
+   "id": "20b9d8cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting data and monitoring plant status...\n",
-      "Monitoring stopped.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import serial\n",
-    "import time\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "# Constants for the messaging interval\n",
-    "MESSAGE_INTERVAL = timedelta(seconds=4)\n",
-    "PLANT_NAME = \"Your Plant\"  # Replace with your plant's name\n",
-    "next_message_time = datetime.now()\n",
-    "\n",
-    "# Serial port settings\n",
-    "SERIAL_PORT = 'COM5'  # Update to your correct serial port\n",
-    "BAUD_RATE = 9600  # Must match the Arduino's baud rate\n",
-    "\n",
-    "# Open the serial connection\n",
-    "ser = serial.Serial(SERIAL_PORT, BAUD_RATE)\n",
-    "time.sleep(2)  # Allow time for the connection to establish\n",
-    "\n",
     "def parse_sensor_data(raw_data):\n",
     "    \"\"\"Parses sensor data from a formatted string.\"\"\"\n",
     "    sensor_data = {}\n",
@@ -1195,7 +1160,43 @@
     "    except (IndexError, ValueError) as e:\n",
     "        print(f\"Error parsing line: {line}, Error: {e}\")\n",
     "    \n",
-    "    return sensor_data\n",
+    "    return sensor_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "91f02e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting data and monitoring plant status...\n",
+      "Monitoring stopped.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import serial\n",
+    "import time\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Constants for the messaging interval\n",
+    "MESSAGE_INTERVAL = timedelta(seconds=4)\n",
+    "#PLANT_NAME = \"Your Plant\"  # Replace with your plant's name\n",
+    "next_message_time = datetime.now()\n",
+    "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name\n",
+    "\n",
+    "# Serial port settings\n",
+    "SERIAL_PORT = 'COM5'  # Update to your correct serial port\n",
+    "BAUD_RATE = 9600  # Must match the Arduino's baud rate\n",
+    "\n",
+    "# Open the serial connection\n",
+    "ser = serial.Serial(SERIAL_PORT, BAUD_RATE)\n",
+    "time.sleep(2)  # Allow time for the connection to establish\n",
+    "\n",
     "\n",
     "\n",
     "print(\"Collecting data and monitoring plant status...\")\n",
