sends real sensor data

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "91f02e57",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "# Constants for the messaging interval\n",
-    "MESSAGE_INTERVAL = timedelta(seconds=4)\n",
+    "MESSAGE_INTERVAL = timedelta(minutes=1)\n",
     "#PLANT_NAME = \"Your Plant\"  # Replace with your plant's name\n",
     "next_message_time = datetime.now()\n",
     "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name\n",
@@ -1217,6 +1217,7 @@
     "                \n",
     "                # Check if it's time to send a message\n",
     "                if datetime.now() >= next_message_time:\n",
+    "                    #! This is where we send the message to the LLM\n",
     "                    send_plant_status_to_followers(\n",
     "                        sensor_data.get('temperature'),\n",
     "                        sensor_data.get('humidity'),\n",
